<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.davu</groupId>
    <artifactId>gravity</artifactId>
    <version>1.0.0-SNAPSHOT</version>

<properties>
    <class>org.davu.app.space.Space</class>
 
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        
    <!-- dependency versions -->
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
    <lwjgl.version>3.3.0</lwjgl.version>
    <imgui.version>1.86.0</imgui.version>
    <joml.version>1.10.3</joml.version>
    
    <platform>windows</platform>
    <lwjgl.natives>natives-windows</lwjgl.natives>
    <!--  lwjgl.natives>natives-linux</lwjgl.natives  -->
    <!--  lwjgl.natives>natives-macos</lwjgl.natives  -->
    <!--  lwjgl.natives>natives-macos-arm64</lwjgl.natives  -->
</properties>

<repositories>
    <repository>
        <id>maven central</id>
        <url>https://repo1.maven.org/maven2/</url>
    </repository>
    <repository>
        <id>jcenter</id>
        <url>https://jcenter.bintray.com/</url>
    </repository>
    <repository>
        <id>maven apache</id>
        <url>https://repo.maven.apache.org/maven2/</url>
    </repository>
    <repository>
        <id>oss.sonatype.org</id>
        <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        <snapshots>
            <enabled>true</enabled>
        </snapshots>
    </repository>
    <repository>
        <id>swt-repo</id>
        <url>http://maven-eclipse.github.io/maven</url>
    </repository>
</repositories>

<dependencies>
	<dependency> <!-- base lwjgl lib necessary for any gl/cl app -->
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl</artifactId>
		<version>${lwjgl.version}</version>
	</dependency>
	<dependency> <!-- some day I might add sound -->
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-openal</artifactId>
		<version>${lwjgl.version}</version>
	</dependency>
	<dependency> <!-- OpenCL Java to native -->
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-opencl</artifactId>
		<version>${lwjgl.version}</version>
	</dependency>
	<dependency> <!-- OpenGL Java to native -->
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-opengl</artifactId>
		<version>${lwjgl.version}</version>
	</dependency>
	<dependency> <!-- OpenGL Java to native -->
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-glfw</artifactId>
		<version>${lwjgl.version}</version>
	</dependency>
	
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl</artifactId>
		<version>${lwjgl.version}</version>
		<classifier>${lwjgl.natives}</classifier>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-glfw</artifactId>
		<version>${lwjgl.version}</version>
		<classifier>${lwjgl.natives}</classifier>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-openal</artifactId>
		<version>${lwjgl.version}</version>
		<classifier>${lwjgl.natives}</classifier>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-opengl</artifactId>
		<version>${lwjgl.version}</version>
		<classifier>${lwjgl.natives}</classifier>
	</dependency>

    <dependency>
        <groupId>org.joml</groupId>
        <artifactId>joml</artifactId>
        <version>${joml.version}</version>
    </dependency>

	<dependency>
	    <groupId>org.apache.logging.log4j</groupId>
	    <artifactId>log4j-core</artifactId>
	    <version>2.17.1</version>
	</dependency>

	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-api</artifactId>
	    <version>5.8.1</version>
	    <scope>test</scope>
	</dependency>
	<dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>4.13.1</version>
		<scope>test</scope>
	</dependency>

</dependencies>

<packaging>jar</packaging>
<build>
   <finalName>gravity</finalName>
	<plugins>
		<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-shade-plugin</artifactId>
			<version>3.2.4</version>
		    <executions>
		        <execution>
					<phase>package</phase>
		            <goals>
		                <goal>shade</goal>
		            </goals>
		            <configuration>
		                <transformers>
		                    <transformer implementation=
		                      "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
								<manifestEntries>
		                        	<Main-Class>${class}</Main-Class>
								</manifestEntries>
		                </transformer>
		            </transformers>
		        </configuration>
		        </execution>
		    </executions>
		</plugin>
	</plugins>
</build>
</project>
